--- a/index.html
+++ b/index.html
@@ -852,23 +852,30 @@
 				</div><!--/ Title row end -->
 
 				<div class="row text-center">
-					<div class="col-xs-12 col-sm-4 col-md-4">
+					<div class="col-xs-12 col-sm-3 col-md-3">
 						<a href="http://restream.rt.ru/" target="_blank" class="sponsor-logo highlight">
 							<img class="img-responsive" src="images/sponsors/restream.png" alt="restream logo" />
 						</a>
 					</div><!-- Col 1 end -->
 
-					<div class="col-xs-12 col-sm-4 col-md-4">
+					<div class="col-xs-12 col-sm-3 col-md-3">
 						<a href="http://supportix.ru/" target="_blank" class="sponsor-logo highlight">
 							<img class="img-responsive" src="images/sponsors/supportix.png" alt="supportix logo" />
 						</a>
 					</div><!-- Col 2 end -->
 
-					<div class="col-xs-12 col-sm-4 col-md-4">
+					<div class="col-xs-12 col-sm-3 col-md-3">
 						<a href="http://php73.ru/" target="_blank" class="sponsor-logo highlight">
 							<img class="img-responsive" src="images/sponsors/mediasoft.png" alt="mediasoft logo" />
 						</a>
 					</div><!-- Col 3 end -->
+
+					<div class="col-xs-12 col-sm-3 col-md-3">
+						<a href="https://itech-group.ru/" target="_blank" class="sponsor-logo highlight">
+							<img class="img-responsive" src="images/sponsors/itech.jpg" alt="itech logo" />
+						</a>
+					</div>
+					<!-- Col 3 end -->
 
 				</div><!--/ Content row 1 end -->
 
