--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
 		</section>
 		<!-- Speakers end -->
 
-		<section id="ts-sponsors" class="ts-sponsors">
+		<section id="ts-spss" class="ts-spss">
 			<div class="container">
 				<div class="row text-center">
 					<span class="icon-wrap"><i class="fa fa-handshake-o"></i></span>
@@ -853,25 +853,25 @@
 
 				<div class="row text-center">
 					<div class="col-xs-12 col-sm-3 col-md-3">
-						<a href="http://restream.rt.ru/" target="_blank" class="sponsor-logo highlight">
+						<a href="http://restream.rt.ru/" target="_blank" class="sps-logo highlight">
 							<img class="img-responsive" src="images/sponsors/restream.png" alt="restream logo" />
 						</a>
 					</div><!-- Col 1 end -->
 
 					<div class="col-xs-12 col-sm-3 col-md-3">
-						<a href="http://supportix.ru/" target="_blank" class="sponsor-logo highlight">
+						<a href="http://supportix.ru/" target="_blank" class="sps-logo highlight">
 							<img class="img-responsive" src="images/sponsors/supportix.png" alt="supportix logo" />
 						</a>
 					</div><!-- Col 2 end -->
 
 					<div class="col-xs-12 col-sm-3 col-md-3">
-						<a href="http://php73.ru/" target="_blank" class="sponsor-logo highlight">
+						<a href="http://php73.ru/" target="_blank" class="sps-logo highlight">
 							<img class="img-responsive" src="images/sponsors/mediasoft.png" alt="mediasoft logo" />
 						</a>
 					</div><!-- Col 3 end -->
 
 					<div class="col-xs-12 col-sm-3 col-md-3">
-						<a href="https://itech-group.ru/" target="_blank" class="sponsor-logo highlight">
+						<a href="https://itech-group.ru/" target="_blank" class="sps-logo highlight">
 							<img class="img-responsive" src="images/sponsors/itech.jpg" alt="itech logo" />
 						</a>
 					</div>
@@ -891,7 +891,7 @@
 			</div>
 			<!--/ Container end -->
 		</section>
-		<!-- Sponsors end -->
+		<!-- spss end -->
 
 		<section id="ts-venue" class="ts-venue">
 			<div class="container">
