--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
     <!-- web-fonts -->
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,500' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
+
+
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -92,6 +96,10 @@
                             профессиональные разработчики со всех городов России, а также все желающие поделиться
                             новыми знаниями, решениями, технологиями.
                         </p>
+                        <p class="lead">
+                            А еще у нас есть сообщество в слаке, куда может вступить каждый желающий: <a href="https://slack-fronthub.herokuapp.com/"><i
+                                    class="fab fa-slack"></i></a>
+                        </p>
                     </div>
                     <div class="col-md-4">
                         <address>
@@ -101,6 +109,11 @@
                             Ульяновск<br>
                             <a href="tel:+79876319367">+7 (987) 631-93-67</a>
                         </address>
+                        <ul class="social-links list-inline">
+                            <li><a href="https://vk.com/fronthub_ulsk"><i class="fab fa-vk"></i></a></li>
+                            <li><a href="http://www.youtube.com/c/frontendsu"><i class="fab fa-youtube"></i></a></li>
+                            <li><a href="https://twitter.com/frontendsu"><i class="fab fa-twitter"></i></a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -119,17 +132,60 @@
                 <div class="row">
                     <div class="col-sm-6 col-md-3">
                         <figure class="thumbnail">
-                            <a href="#"><img src="img/speakers/alena.png" class="img-responsive" alt="Image"></a>
+                            <img src="img/speakers/alena.png" class="img-responsive" alt="Image">
                             <figcaption class="caption text-center">
                                 <h3>Алёна Алексеева
                                     <small>Тинькофф банк</small>
                                 </h3>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <figure class="thumbnail">
+                            <img src="img/speakers/kirill.png" class="img-responsive" alt="Image">
+                            <figcaption class="caption text-center">
+                                <h3>Кирилл Мокевнин
+                                    <small>Hexlet</small>
+                                </h3>
                                 <ul class="social-links">
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+                                    <li><a href="https://twitter.com/mokevnin"><i class="fab fa-twitter"></i></a></li>
                                 </ul>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <figure class="thumbnail">
+                            <img src="img/speakers/Семирульник.png" class="img-responsive" alt="Image">
+                            <figcaption class="caption text-center">
+                                <h3>Валентин Семирульник
+                                    <small>osome.com</small>
+                                </h3>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <figure class="thumbnail">
+                            <img src="img/speakers/bogdan.png" class="img-responsive" alt="Image">
+                            <figcaption class="caption text-center">
+                                <h3>Богдан Руденко
+                                    <small>Рестрим</small>
+                                </h3>
+                                <ul class="social-links">
+                                    <li><a href="https://medium.com/@bogdan.homlet"><i class="fab fa-medium"></i></a></li>
+                                    <li><a href="https://twitter.com/B_Fess"><i class="fab fa-twitter"></i></a></li>
+                                </ul>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 col-md-3">
+                        <figure class="thumbnail">
+                            <img src="img/speakers/lopatina.png" class="img-responsive" alt="Image">
+                            <figcaption class="caption text-center">
+                                <h3>Анастасия Лопатина
+                                    <small>CSSR</small>
+                                </h3>
                             </figcaption>
                         </figure>
                     </div>
@@ -160,11 +216,11 @@
                         </div>
                         <!-- .session -->
 
-                        <!-- <div class="session">
-                            <time>9:30 - 9:40AM</time>
-                            <h2>Opening Remarks</h2>
-                            <h3>Fiona Kuhn <span>CO-FOUNDER & CEO, MES</span></h3>
-                        </div> -->
+                        <div class="session">
+                            <time>10:00 - 19:00</time>
+                            <h2>Секция с докладами</h2>
+                            <h3>уточняется</span></h3>
+                        </div>
                         <!-- .session -->
 
                         <!-- <div class="session">
@@ -174,11 +230,14 @@
                         </div> -->
                         <!-- .session -->
 
-                        <!-- <div class="session">
-                            <time>10:10 - 10:35AM</time>
-                            <h2>Keynote Presentation</h2>
-                            <h3>Zoe Kühn <span>CO-FOUNDER & CEO,, BOOSTER</span></h3>
-                        </div> -->
+                        <div class="session">
+                            <time>19-00</time>
+                            <h2>Закрытие</h2>
+                        </div>
+                        <div class="session">
+                            <time>20-00</time>
+                            <h2>Афтерпати</h2>
+                        </div>
                         <!-- .session -->
 
 
