small fixes (refs #2018)

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="jumbotron text-center">
             <div class="content">
-                <div class="event-date">НОЯБРЬ 17, 2018, УЛЬЯНОВСК</div>
+                <div class="event-date">17 НОЯБРЯ 2018, УЛЬЯНОВСК</div>
                 <h1>Fronthub</h1>
                 <p class="lead">Ежегодная фронтенд конференция</p>
                 <a href="#section-speaker" type="button" class="btn btn-default btn-lg">Есть что послушать</a>
@@ -211,13 +211,13 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="session">
-                            <time>9:00</time>
+                            <time>11:00</time>
                             <h2>Открытие</h2>
                         </div>
                         <!-- .session -->
 
                         <div class="session">
-                            <time>10:00 - 19:00</time>
+                            <time>11:20 - 19:00</time>
                             <h2>Секция с докладами</h2>
                             <h3>уточняется</span></h3>
                         </div>
