удалены секции (refs #2018)

--- a/index.html
+++ b/index.html
@@ -198,92 +198,7 @@
         </section>
         <!-- .team -->
 
-        <section id="section-ajenda" class="section-wrapper section-ajenda">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="section-title">
-                            <h1>Расписание</h1>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="session">
-                            <time>11:00</time>
-                            <h2>Открытие</h2>
-                        </div>
-                        <!-- .session -->
-
-                        <div class="session">
-                            <time>11:20 - 19:00</time>
-                            <h2>Секция с докладами</h2>
-                            <h3>уточняется</span></h3>
-                        </div>
-                        <!-- .session -->
-
-                        <!-- <div class="session">
-                            <time>9:50 - 10:05AM</time>
-                            <h2>Focus on the story: how publishers and brands succeed on today's internet.</h2>
-                            <h3>Marie Jung <span>HEAD OF PARTNERSHIPS, MES</span></h3>
-                        </div> -->
-                        <!-- .session -->
-
-                        <div class="session">
-                            <time>19-00</time>
-                            <h2>Закрытие</h2>
-                        </div>
-                        <div class="session">
-                            <time>20-00</time>
-                            <h2>Афтерпати</h2>
-                        </div>
-                        <!-- .session -->
-
-
-                    </div>
-                </div>
-            </div>
-
-        </section>
-
-
-        <section id="section-partner" class="section-wrapper client-logo">
-            <!-- <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="section-title">
-                            <h1>PARTNERS</h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
-                        <a href="#"><img src="img/logo-client-1.jpg" alt="Image"></a>
-                    </div>
-                    <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
-                        <a href="#"><img src="img/logo-client-2.jpg" alt="Image"></a>
-                    </div>
-                    <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
-                        <a href="#"><img src="img/logo-client-3.jpg" alt="Image"></a>
-                    </div>
-                    <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
-                        <a href="#"><img src="img/logo-client-4.jpg" alt="Image"></a>
-                    </div>
-                    <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
-                        <a href="#"><img src="img/logo-client-5.jpg" alt="Image"></a>
-                    </div>
-                    <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
-                        <a href="#"><img src="img/logo-client-6.jpg" alt="Image"></a>
-                    </div>
-                </div>
-            </div> -->
-            <!--end of .container -->
-        </section>
-        <!-- .client-logo -->
-
-
-        <section id="section-venue" class="section-wrapper  gray-bg">
+        <section id="section-venue" class="section-wrapper">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
