--- a/index.html
+++ b/index.html
@@ -189,6 +189,19 @@
                             </figcaption>
                         </figure>
                     </div>
+                    <div class="col-sm-6 col-md-3">
+                        <figure class="thumbnail">
+                            <img src="img/speakers/nikita.jpeg" class="img-responsive" alt="Image">
+                            <figcaption class="caption text-center">
+                                <h3>Никита Прокопов
+                                    <!-- <small>CSSR</small> -->
+                                </h3>
+                                <ul class="social-links">
+                                    <li><a href="https://twitter.com/nikitonsky"><i class="fab fa-twitter"></i></a></li>
+                                </ul>
+                            </figcaption>
+                        </figure>
+                    </div>
                     <!-- /.col-sm-6 -->
 
                 </div>
