--- a/index.html
+++ b/index.html
@@ -100,6 +100,13 @@
                             А еще у нас есть сообщество в слаке, куда может вступить каждый желающий: <a href="https://slack-fronthub.herokuapp.com/"><i
                                     class="fab fa-slack"></i></a>
                         </p>
+                        <p class="lead">
+                            Пройди простую регистрацию, и мы будем знать кто к нам придет на конфу
+                            <script type="text/javascript" async="async" defer="defer" charset="UTF-8" src="https://timepad.ru/js/tpwf/loader/min/loader.js"
+                                data-timepad-customized="41550" data-timepad-widget-v2="event_register">
+                                    (function () { return { "event": { "id": "829078" }, "hidePreloading": true, "initialRoute": "button", "buttonSettings": { "text": "Зарегистрироваться" } }; })();
+                                </script>
+                        </p>
                     </div>
                     <div class="col-md-4">
                         <address>
