фронт-енд через дефис

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="content">
                 <div class="event-date">17 НОЯБРЯ 2018, УЛЬЯНОВСК</div>
                 <h1>Fronthub</h1>
-                <p class="lead">Ежегодная фронтенд конференция</p>
+                <p class="lead">Ежегодная фронт-енд конференция</p>
                 <a href="#section-speaker" type="button" class="btn btn-default btn-lg">Есть что послушать</a>
             </div>
         </div>
@@ -190,8 +190,11 @@
                             <img src="img/speakers/lopatina.png" class="img-responsive" alt="Image">
                             <figcaption class="caption text-center">
                                 <h3>Анастасия Лопатина
-                                    <small>CSSR</small>
+                                    <small>CSSSR</small>
                                 </h3>
+                                <ul class="social-links">
+                                    <li><a href="https://github.com/rikkalo"><i class="fab fa-github"></i></a></li>
+                                </ul>
                             </figcaption>
                         </figure>
                     </div>
