--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="content">
                 <div class="event-date">17 НОЯБРЯ 2018, УЛЬЯНОВСК</div>
                 <h1>Fronthub</h1>
-                <p class="lead">Ежегодная фронт-енд конференция</p>
+                <p class="lead">Ежегодная фронтенд-конференция</p>
                 <a href="#section-speaker" type="button" class="btn btn-default btn-lg">Есть что послушать</a>
             </div>
         </div>
