--- a/index.html
+++ b/index.html
@@ -220,7 +220,31 @@
         </section>
         <!-- .team -->
 
-        <section id="section-venue" class="section-wrapper">
+        <section id="section-partner" class="section-wrapper client-logo">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="section-title">
+                            <h1>Организаторы</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2 col-sm-4 col-xs-6 col-md-offset-3 section-margin text-center">
+                        <img src="img/logo.png" height="100" alt="Image">
+                    </div>
+                    <div class="col-md-2 col-sm-4 col-xs-6 section-margin text-center">
+                        <img src="img/orgs/rostelek.png" height="100" alt="Image">
+                    </div>
+                    <div class="col-md-2 col-sm-4 col-xs-6 section-margin text-center">
+                        <img src="img/orgs/dbp.svg" height="100" alt="Image">
+                    </div>
+                </div>
+            </div>
+            <!--end of .container -->
+        </section>
+
+        <section id="section-venue" class="section-wrapper gray-bg">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
