--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <li class="hidden"><a href="#page-top"></a></li>
                             <li><a class="page-scroll" href="#section-intro">О конференции</a></li>
                             <li><a class="page-scroll" href="#section-speaker">Спикеры</a></li>
-                            <!-- <li><a class="page-scroll" href="#section-partner">Спонсоры</a></li> -->
+                            <li><a class="page-scroll" href="#section-partner">Организаторы</a></li>
                             <li><a class="page-scroll" href="#section-venue">Где</a></li>
                         </ul>
                     </div>
