подвигал кнопку регистрации в шапку

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <![endif]-->
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar">
+<body class="body" id="page-top" data-spy="scroll" data-target=".navbar">
     <div id="main-wrapper">
         <!-- Page Preloader -->
         <div id="preloader">
@@ -80,7 +80,24 @@
                 <div class="event-date">17 НОЯБРЯ 2018, УЛЬЯНОВСК</div>
                 <h1>Fronthub</h1>
                 <p class="lead">Ежегодная фронтенд-конференция</p>
-                <a href="#section-speaker" type="button" class="btn btn-default btn-lg">Есть что послушать</a>
+                <div class="cta-row">
+                    <a href="#section-speaker" type="button" class="btn btn-default btn-lg">Есть что послушать</a>
+
+                    <script type="text/javascript" async="async" defer="defer" charset="UTF-8" src="https://timepad.ru/js/tpwf/loader/min/loader.js"
+                        data-timepad-customized="41550" data-timepad-widget-v2="event_register">
+                            (function () {
+                                return {
+                                    "event": { "id": "829078" },
+                                    "hidePreloading": true,
+                                    "initialRoute": "button",
+                                    "buttonSettings": { "text": "Зарегистрироваться" },
+                                    "loadCSS": ["css/style.css"]
+
+                                };
+                            })();
+                        </script>
+                </div>
+
             </div>
         </div>
         <!-- .Jumbotron-->
