ебанул br под кнопку

--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
                         </p>
                         <p class="lead">
                             Пройди простую регистрацию, и мы будем знать кто к нам придет на конфу
+                            <br>
+                            <br>
                             <script type="text/javascript" async="async" defer="defer" charset="UTF-8" src="https://timepad.ru/js/tpwf/loader/min/loader.js"
                                 data-timepad-customized="41550" data-timepad-widget-v2="event_register">
                                     (function () { return { "event": { "id": "829078" }, "hidePreloading": true, "initialRoute": "button", "buttonSettings": { "text": "Зарегистрироваться" } }; })();
@@ -148,7 +150,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="section-title">
-                            <h1>Спикеры:</h1>
+                            <h1>Спикеры</h1>
                         </div>
                     </div>
                 </div>
