имя и фирму у Алены поменял

--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                         <figure class="thumbnail">
                             <img src="img/speakers/alena.png" class="img-responsive" alt="Image">
                             <figcaption class="caption text-center">
-                                <h3>Алёна Алексеева
-                                    <small>Тинькофф банк</small>
+                                <h3>Алёна Тикунова
+                                    <small>Tinkoff.ru</small>
                                 </h3>
                             </figcaption>
                         </figure>
