--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Fronthub 2018</title>
 
+    <meta property="og:title" content="Fronthub 2018" />
+    <meta property="og:url" content="http://fronthub.ru" />
+    <meta property="og:image" content="//img/logo.png" />
+    <meta property="og:description" content="Конференция по front-end. 17 ноября 2018г, Ульяновск, ул. Гончарова 25(гостиница Hilton). Регистрация обязательна. Вход бесплатный." />
+
     <!-- favicon -->
     <link href="favicon.png" rel=icon>
 
