--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta property="og:title" content="Fronthub 2018" />
     <meta property="og:url" content="http://fronthub.ru" />
-    <meta property="og:image" content="//img/logo.png" />
+    <meta property="og:image" content="http://fronthub.ru/img/logo.png" />
     <meta property="og:description" content="Конференция по front-end. 17 ноября 2018г, Ульяновск, ул. Гончарова 25(гостиница Hilton). Регистрация обязательна. Вход бесплатный." />
 
     <!-- favicon -->
