--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Fronthub 2018" />
     <meta property="og:url" content="http://fronthub.ru" />
     <meta property="og:image" content="http://fronthub.ru/img/logo.png" />
-    <meta property="og:description" content="Конференция по front-end. 17 ноября 2018г, Ульяновск, ул. Гончарова 25(гостиница Hilton). Регистрация обязательна. Вход бесплатный." />
+    <meta property="og:description" content="Конференция по front-end. 17 ноября 2018г, Ульяновск, ул. Гончарова 25 (отель Hilton). Регистрация обязательна. Вход бесплатный." />
 
     <!-- favicon -->
     <link href="favicon.png" rel=icon>
