Add link in top navigation

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                             <li class="hidden"><a href="#page-top"></a></li>
                             <li><a class="page-scroll" href="#section-intro">О конференции</a></li>
                             <li><a class="page-scroll" href="#section-speaker">Спикеры</a></li>
+                            <li><a class="page-scroll" href="#section-timetable">Расписание</a></li>
                             <li><a class="page-scroll" href="#section-partner">Организаторы</a></li>
                             <li><a class="page-scroll" href="#section-venue">Где</a></li>
                         </ul>
@@ -244,7 +245,7 @@
         </section>
         <!-- .team -->
 
-        <section id="section-ajenda" class="section-wrapper section-ajenda">
+        <section id="section-timetable" class="section-wrapper section-ajenda">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
