--- a/index.html
+++ b/index.html
@@ -237,6 +237,16 @@
                         </figure>
                     </div>
                     <!-- /.col-sm-6 -->
+                    <div class="col-sm-6 col-md-3">
+                        <figure class="thumbnail">
+                            <img src="img/speakers/ermakov.jpg" class="img-responsive" alt="Image">
+                            <figcaption class="caption text-center">
+                                <h3>Денис Ермаков
+                                    <small>Weblime</small>
+                                </h3>
+                            </figcaption>
+                        </figure>
+                    </div>
 
                 </div>
                 <!-- .row -->
