--- a/index.html
+++ b/index.html
@@ -338,10 +338,17 @@
                             <h3>Анастасия Лопатина <span>CSSSR.ru</span></h3>
                         </div>
                         <!-- .session -->
+
+                        <div class="session">
+                            <time>17:00 - 17:30</time>
+                            <h2>«Почему хорошие парни делают шоколадное мороженное»</h2>
+                            <h3>Денис Ермаков <span>CSSSR.ru</span></h3>
+                        </div>
+                        <!-- .session -->
     
     
                         <div class="session">
-                            <time>17:00</time>
+                            <time>17:30</time>
                             <h2>Закрытие</h2>
                         </div>
                         <!-- .session -->
