--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
                         <div class="session">
                             <time>17:00 - 17:30</time>
-                            <h2>«Почему хорошие парни делают шоколадное мороженное»</h2>
+                            <h2>«Почему хорошие парни делают шоколадное мороженое»</h2>
                             <h3>Денис Ермаков <span>CSSSR.ru</span></h3>
                         </div>
                         <!-- .session -->
