--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                         <div class="session">
                             <time>17:00 - 17:30</time>
                             <h2>«Почему хорошие парни делают шоколадное мороженое»</h2>
-                            <h3>Денис Ермаков <span>weblime</span></h3>
+                            <h3>Денис Ермаков <span>Weblime</span></h3>
                         </div>
                         <!-- .session -->
     
