добавил инфо партнеров

--- a/index.html
+++ b/index.html
@@ -406,6 +406,26 @@
                     </div>
                 </div>
             </div>
+            <br>
+            <br>
+            <br>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="section-title">
+                            <h1>Информационные партнеры</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2 col-sm-4 col-xs-6 col-md-offset-4 section-margin text-center">
+                        <img src="img/partners/jskitchen_logo_vector.svg" height="100" alt="Image">
+                    </div>
+                    <div class="col-md-2 col-sm-4 col-xs-6 section-margin text-center">
+                        <img src="img/partners/ulcamp logo 2016 color-1.png" height="100" alt="Image">
+                    </div>
+                </div>
+            </div>
             <!--end of .container -->
         </section>
 
