Change Kirill's issue name

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
                         <div class="session">
                             <time>14:20 - 15:00</time>
-                            <h2>«Тестирование веба — тема больная для всех»</h2>
+                            <h2>«Начинаем писать тесты (правильно)»</h2>
                             <h3>Кирилл Мокевнин <span>Hexlet.io</span></h3>
                         </div>
                         <!-- .session -->
