--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                             <h2>Перерыв на обед</h2>
                         </div>
                         <!-- .session -->
-                        
+
                         <div class="session">
                             <time>13:30 - 14:10</time>
                             <h2>«Воркеры. Когда одного потока мало»</h2>
@@ -384,6 +384,76 @@
             </div>
 
         </section>
+
+        <section id="section-venue" class="section-wrapper gray-bg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="section-title">
+                            <h1>Информация и общение</h1>
+                        </div>
+                    </div>
+                </div>
+                <!-- .row-->
+                <div class="row">
+                    <div class="col-xs-12 col-md-4">
+                        <p class="lead">
+                            <a href="https://t.me/fronthub" target="_blank">https://t.me/fronthub</a>
+                        </p>
+                    </div>
+                    <div class="col-xs-12 col-md-8">
+                        <p class="lead">
+                            оф.чат в телеграме с новостями и уведомлениями
+                        </p>
+                    </div>
+                </div>
+                <!-- .row-->
+
+                <div class="row">
+                    <div class="col-xs-12 col-md-4">
+                        <p class="lead">
+                                <a href="https://t.me/FrontHubChat" target="_blank">https://t.me/FrontHubChat</a>
+                        </p>
+                    </div>
+                    <div class="col-xs-12 col-md-8">
+                        <p class="lead">
+                            флудилка участников, можно высказать отзывы и пожелания, обсудить доклады, договориться с корешами в какой бар идти, спросить у местных где лучше пообедать и всё такое
+                        </p>
+                    </div>
+                </div>
+                <!-- .row-->
+
+                <div class="row">
+                    <div class="col-xs-12 col-md-4">
+                        <p class="lead">
+                            <a href="https://t.me/FrontHubQA" target="_blank">https://t.me/FrontHubQA</a>
+                        </p>
+                    </div>
+                    <div class="col-xs-12 col-md-8">
+                        <p class="lead">
+                            вопросы к докладам, мы их зачитаем со сцены. Если вы интроверт и стесняшка — вам сюда.
+                        </p>
+                    </div>
+                </div>
+                <!-- .row-->
+
+                <div class="row">
+                        <div class="col-xs-12 col-md-4">
+                            <p class="lead">
+                                <a href="https://slack-fronthub.herokuapp.com/" target="_blank">https://slack-fronthub.herokuapp.com/</a>
+                            </p>
+                        </div>
+                        <div class="col-xs-12 col-md-8">
+                            <p class="lead">
+                                наш Slack — общение на профессиональные и не очень темы
+                            </p>
+                        </div>
+                    </div>
+                    <!-- .row-->
+                
+            </div>
+        </section>
+        <!-- contact-section -->
 
         <section id="section-partner" class="section-wrapper client-logo">
             <div class="container">
