--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                     </div>
                     <div class="col-xs-12 col-md-8">
                         <p class="lead">
-                            вопросы к докладам, мы их зачитаем со сцены. Если вы интроверт и стесняшка — вам сюда.
+                            вопросы к докладам, мы их зачитаем со сцены. Если вы смотрите прямую трансляцию, или интроверт и стесняшка — вам сюда.
                         </p>
                     </div>
                 </div>
