add WSD partners

--- a/index.html
+++ b/index.html
@@ -418,11 +418,20 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2 col-sm-4 col-xs-6 col-md-offset-4 section-margin text-center">
-                        <img src="img/partners/jskitchen_logo_vector.svg" height="100" alt="Image">
+                    <div class="col-md-2 col-sm-4 col-xs-6 col-md-offset-3 section-margin text-center">
+                        <a href="https://javascript-kitchen.js.org">
+                            <img src="img/partners/jskitchen_logo_vector.svg" height="100" alt="Image">
+                        </a>
                     </div>
                     <div class="col-md-2 col-sm-4 col-xs-6 section-margin text-center">
-                        <img src="img/partners/ulcamp logo 2016 color-1.png" height="100" alt="Image">
+                        <a href="https://2018.ulcamp.ru">
+                            <img src="img/partners/ulcamp logo 2016 color-1.png" height="100" alt="Image" style="width:initial">
+                        </a>
+                    </div>
+                    <div class="col-md-2 col-sm-4 col-xs-6 section-margin text-center">
+                        <a href="https://vk.com/webstandards_ru">
+                            <img src="img/partners/wbstndrts.svg" height="100" alt="Image">
+                        </a>
                     </div>
                 </div>
             </div>
