Fronthub 2019. Register link

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       <nav class="nav">
         <ul class="nav-list">
           <li><a href="#speakers">Что послушать?</a></li>
-          <li><a href="#register">Зарегистрироваться</a></li>
+          <li><a href="https://fronthub.timepad.ru/event/1091724/" target="_blank">Зарегистрироваться</a></li>
         </ul>
       </nav>
 
