--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
       body {
         display: flex;
         flex-direction: column;
-        padding: 20px 30px;
+        padding: 20px 15px;
         font-size: 18px;
+        margin: 0;
       }
 
       header {
@@ -155,7 +156,7 @@
 
       .speakers-list {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
         grid-template-rows: auto;
         grid-column-gap: 10px;
         grid-row-gap: 15px;
