--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             <figure class="thumbnail">
               <img src="img/fatyuk.jpg" class="img-responsive" alt="Андрей Фатюк" loading="lazy">
               <figcaption class="caption text-center">
-                <h3>Андрей Фатюк<small class="company-name">TaxDome</small></h3>
+                <h3>Андрей Фатюк<small class="company-name">ТаксДом</small></h3>
                 <h4>Тестирование скриншотами</h4>
               </figcaption>
             </figure>
@@ -376,7 +376,7 @@
             <img src="img/logo.png" alt="Fronthub" height="100px">
           </li>
           <li class="sponsors-item">
-            <img class="js-icon-replace" id="taxdome" src="img/taxdome.svg" alt="TaxDome" height="100px">
+            <img class="js-icon-replace" id="taxdom" src="img/taxdom.svg" alt="ТаксДом" height="100px">
           </li>
         </ul>
 
