Добавил белое лого DBP

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
         <h2>Спонсоры и организаторы</h2>
         <ul class="sponsors-list">
           <li class="sponsors-item">
-            <img src="img/dbp.svg" alt="Dualboot Partners" height="100px">
+            <img class="js-icon-replace" id="dbp" src="img/dbp.svg" alt="Dualboot Partners" height="100px">
           </li>
           <li class="sponsors-item">
             <img class="js-icon-replace" id="rostelek" src="img/rostelek.svg" alt="Ростелеком" height="100px">
