--- a/index.html
+++ b/index.html
@@ -367,19 +367,24 @@
         <h2>Спонсоры и организаторы</h2>
         <ul class="sponsors-list">
           <li class="sponsors-item">
-            <img class="js-icon-replace" id="dbp" src="img/dbp.svg" alt="Dualboot Partners" height="100px">
+            <img class="js-icon-replace" id="dbp" src="img/dbp.svg" alt="Dualboot Partners" height="100px" title="Dualboot Partners">
           </li>
           <li class="sponsors-item">
-            <img class="js-icon-replace" id="rostelek" src="img/rostelek.svg" alt="Ростелеком" height="100px">
+            <img class="js-icon-replace" id="rostelek" src="img/rostelek.svg" alt="Ростелеком ИТ" height="100px" title="Ростелеком ИТ">
           </li>
           <li class="sponsors-item">
-            <img src="img/logo.png" alt="Fronthub" height="100px">
+            <img src="img/logo.png" alt="Fronthub" height="100px" title="Fronthub">
           </li>
           <li class="sponsors-item">
-            <img class="js-icon-replace" id="taxdom" src="img/taxdom.svg" alt="ТаксДом" height="100px">
+            <img class="js-icon-replace" id="taxdom" src="img/taxdom.svg" alt="ТаксДом" height="100px" title="ТаксДом">
           </li>
         </ul>
-
+        <h2>Информационный партнёр</h2>
+        <ul class="sponsors-list">
+          <li class="sponsors-item">
+            <img class="js-icon-replace" id="hexlet" src="img/hexlet.svg" alt="Hexlet" height="100px" title="Hexlet">
+          </li>
+        </ul>
       </section>
 
       <section class="contacts">
