--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
           </li>
           <li class="speakers-item">
             <figure class="thumbnail">
-              <img src="img/alena.png" class="img-responsive" alt="Алёна Батицкая" loading="lazy">
+              <img src="img/alena.jpg" class="img-responsive" alt="Алёна Батицкая" loading="lazy">
               <figcaption class="caption text-center">
                 <h3>Алёна Батицкая</h3>
               </figcaption>
