Добавлена фотка Молчанова

--- a/index.html
+++ b/index.html
@@ -366,6 +366,14 @@
           </li>
           <li class="speakers-item">
             <figure class="thumbnail">
+              <img src="img/constantine.jpg" class="img-responsive" alt="Костя Молчанов" loading="lazy">
+              <figcaption class="caption text-center">
+                <h3>Костя Молчанов<small class="company-name">ТаксДом</small></h3>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="speakers-item">
+            <figure class="thumbnail">
               <img src="img/ermakov.jpg" class="img-responsive" alt="Денис Ермаков" loading="lazy">
               <figcaption class="caption text-center">
                 <h3>Денис Ермаков<small class="company-name"><abbr title="Ростелеком Информационные Технологии">РТК ИТ</abbr></small></h3>
